added better detail about LUMS

--- a/FundTransfer401k.html
+++ b/FundTransfer401k.html
@@ -76,21 +76,24 @@
 										<ol> 
 											<li>Create a new Transfer in Squee</li>
 												<ul>												
-													<li><span class="inSquee">Use the form navigator to go to PruTransfer</span></li>
+													<li><span class="inSquee">Use the form navigator to go to Prudential</span></li>
 													<li><span class="inSquee">Click on the Add Date button.</span>
 														<ol>
-															<li>Squee will ask you to confirm a transfer date, you can change it if you need to.</li>
+															<li><span class="inSquee">Squee will ask you to confirm a transfer date, you can change it if you need to.</span></li>
 														</ol>
 													</li>
 												</ul>	
 											<li><h4>Add ER batches that are ready to transfer.</h4></li>
 												<ul>
-													<li><span class="inSquee">Click on the ER tab.</span></li>
-													<li><span class="inSquee">Double click on batches in the available list box to move it to the ? list box.</span></li>
+													<li><span class="inSquee">Click on the ER Log tab.</span></li>
+													<li><span class="inSquee">Double click on batches in the Pending list box to move them to the Assigned list box, which
+														adds it to the transfer.  The transfer total will also update.
+													</span></li>
 													<ol>
-														<li><span class="inSquee">If it does not move no reports are in lums note to self just make a message for this.</span></li>
-														<li><span class="inSquee">Sometimes only some of the money will move another not to self.</span></li>
-														<li>Squee will tell you with a pop-up message if the entire batch is not being moved to the transfer.</li>
+														<li><span class="inSquee">
+															Squee will let you know with a pop-up message if all of the reports in the batch are
+															being added to this transfer.
+														</span></li>
 													</ol>
 												</ul>
 											<li><h4>Add EE batches that are ready to transfer</h4></li>
