small changes on training with tracy

--- a/FundTransfer401k.html
+++ b/FundTransfer401k.html
@@ -54,7 +54,7 @@
 					<div class="row">
 						<div class="col-12">
 							<article id="content">
-								<header><h2>Funds Transfer - 401(k)</h2></header>
+								<header><h2>401(k) Fund Transfer</h2></header>
 								<p>
 									Posted 401(k) money, both EE and ER, is funded to member accounts every Wednesday. Sometimes Tom will request that an
 									out of cycle transfer be done to close the calendar month. A word of warning, the LUMS produced suporting docs
