--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 				<div id="banner" class="container">
 					<section>
 						<header>
-							<h2>Magna etiam lorem</h2>
-							<span class="byline">Tempus aliquam sed consequat feugiat magna etiam</span>
+							<h2>Squee Help</h2>
+							<span class="byline">Squee help, including how it interacts with LUMS and LUMS Helper</span>
 						</header>
 						<footer>
-							<a href="#" class="button icon solid fa-long-arrow-alt-right">Praesent gravidan</a>
+							<a href="FundTransfer401k.html" class="button icon solid fa-long-arrow-alt-right">
+								Get started with Fund 401k Fund Transfers</a>
 						</footer>
 					</section>
 				</div>
