started on invoices

--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
 										<ul>
 											<li><a href="contrib_ee.html">Employee Processing</a></li>
 										</ul>
-
 									</li>
 									<li>
 										<a href="#">Fund Transfers</a>
 										<ul>
-											<li><a href="FundTransfer401k.html">401(k)</a></li>
+											<li><a href="FundTransfer_401k.html">401(k)</a></li>
 										</ul>
-										
 									</li>
-
+									<li>
+										<a href="#">Invoices</a>
+										<ul>
+											<li><a href="Invoices_Open.html">Open Invoices</a></li>
+										</ul>
+									</li>
 								</ul>
 							</nav>
 
@@ -59,7 +62,7 @@
 							<span class="byline">Squee help, including how it interacts with LUMS and LUMS Helper</span>
 						</header>
 						<footer>
-							<a href="FundTransfer401k.html" class="button icon solid fa-long-arrow-alt-right">
+							<a href="FundTransfer_401k.html" class="button icon solid fa-long-arrow-alt-right">
 								Get started with Fund 401k Fund Transfers</a>
 						</footer>
 					</section>
@@ -71,6 +74,11 @@
 					<a href="#"><span class="next-button icon solid fa-angle-right"></span></a>
 					<div class="viewer">
 						<div class="reel">
+							<div class="slide">
+								<span class="pennant"><span class="icon solid fa-exclamation"></span></span>
+								<p>Below this is all gibberish that came with the template. I haven't gotten to modifying it yet.</p>
+								<a href="#" class="links">More</a>
+							</div>
 							<div class="slide">
 								<span class="pennant"><span class="icon solid fa-rocket"></span></span>
 								<p>Phasellus ultrices nulla quis nibh. Quisque a lectu. Donec consectetuer ligula et vulputate.</p>
