started open invoices

--- a/Invoices_Open.html
+++ b/Invoices_Open.html
@@ -50,120 +50,30 @@
 								<p>
 									Working on the report. Avery 1/21/2022
 								</p>
-								<h3>View summary of outstanding balances for Open Invoices</h3>
+								<h3>View summary of Open Invoices for a single Employer</h3>
 								<p>
-									When there are more than 2 or 3 Open Invoices that are a mix of both bills and credits, it is difficult to apply credits accurately. This
-									employer feature can help you visualize where all the employer credits and liabilities.   
+									It cna be difficult to visualize a summary (by fund) when an empoloyer has multiple open invoices that are a mix of both bills and credits.
+									There is an employer feature can may be able to help.   
 								</p>
 
 									<div class="step-by-step"></div>
 										<ol>
-											<li><h4></h4>	
-												<ul class="instructions">
-													<li>On the Squee main form navigator, click the Batches EE button.</li>
-													<li>On the Batches EE main form click the Add Batch button.</li>
-													<li>The Add New Batch form will pop-up. Add the batch vitals, required fields have a colored background.</li>
-														<div class="tip"><span class="icon far fa-lightbulb"></span>
-															&nbsp;You can do all the batches for the day at the same time.
-														</div>
-													</li>
-													<li>Select the target batch from the Batches listbox.</li>
-												</ul>
-											<li><h4>Process all the employer reports in the batch.</h4>											
+											<li><h4>Navigate to the Employer and click on the Ledger tab.</h4>	
+											<li><h4>Click on the 'Query for Open Invoices' button.</h4>											
 												<ul>
-													<li>Go to the Batch Reports subform and input the report vitals.</li>
-														<ol>
-															<li>Enter EmployerID, CheckAmount and CheckNumber.</li>
-															<ol>
-																<li>
-																	Reports with a $0.00 received amount still need to be uploaded to LUMS. Squee
-																	will automatically insert a <a>bogus member</a> to the report to allow for this.
-																</li>
-																<li>When you leave </li>	
-															</ol>
-															<li>
-																Member Sort form.
-															</li>
-														</ol>
-														After you enter the check
-														number.The Member Sort form should appear after</li>
-													you input the check number. If it does not then click the Sort button.</li>
-														<li>Once the batch is in balance then you can upload to to LUMS. 
-												<ol >
-												<li></li>
-												</ol>
-											</ul>	
-												
-
-											</li>
-													<li><p>
-															Add, remove or rearrange members on the Member Sort form so that it matches the employers report. The
-															Member Sort form uses hotkeys to alleviate frequent and repetitive tasks.
-														</p>
-														<div><img id="right" src="images/placeholder.png"></div>
+													<li>A query will open up with all open invoices grouped by invoice and segretated by fund.</li>
+													<li>You can copy and past the query results to a spreadsheet.</li>
+													<li>Don't forget to close the query once you are done.</li>
+												</ul>
+											<li><h4>The list box on the form shows all Redeemed Credits (RC).</h4></li>
+												<ul>
+													<li>This is to help verify whether a credit is truly available or was redeemed but were unrecorded
+														on an invoice.	
 													</li>
-													<li><p>
-															Input member hours. As you add their hours the due amount for each individual is calculated and thereport
-															total is updated.
-															(add notes about background colors and what they signify)
-														</p>	
-														<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-													<li><p>
-															updating rate
-														</p>
-														<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-													<li><p>
-
-														</p>
-														<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-													<li><p>
-
-													</p>
-													<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-													<li><p>
-
-													</p>
-													<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-													<li><p>
-
-													</p>
-													<div><img id="right" src="images/placeholder.png"></div>
-													</li>
-
-
-												<ol type="I">
-													<li>Select EE Batches on the Main Form of Squee.</li>
-													<li>Click the Add Batch button.</li>
-													<li>In the pop-up form add the batch vitals. Close the form when you are done with all batches.</li>
-													<li>Input reports for the selected batch.</li>				
-														<ul>
-															<li>Create a record for the report.</li>
-															<li>Add members and their hours.</li>
-															<ol>
-																<li>Members Sort</li>
-																<li></li>							
-																<li></li>
-															</ol>
-														</ul>
-						
-												<ol>
-											<li>ho there</li>
-										</ol>				
+												</ul>												
+										</ol>
 									</div>
-								<!--**end EE ERF using Squee**-->
-								<h3>Processing Employer Reports <u>without</u> Squee</h3>
-								<h3>Feugiat auctor non consequat</h3>
-								<p>Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Donec leo. Vivamus fermentum nibh in augue. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Aliquam sem leo, vulputate sed, convallis at, ultricies. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. </p>
-								<p>Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Proin gravida orci porttitor enim accumsan lacinia. Aliquam lacinia metus ut elit. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum.</p>
 							</article>
-
-
-							<span class="byline">Pellentesque quis elit non lectus gravida blandit</span>
 						</div>
 					</div>
 
